# CuSaxs

./: .flake8  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CuSAXS.cu  LICENSE  OPTIMIZATIONS.md  README.md  _config.yml  about.md  api.md  environment.yml  index.md  tutorials.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  jekyll.yml  lint.yml  mlc_config.json
Exec/: CMakeLists.txt  ImprovedRunSaxs.cu  RunSaxs.cu
Saxs/: CMakeLists.txt  Splines.cu  opsfact.cu  saxsDeviceKernels.cu  saxsDeviceKernels.cuh  saxsKernel.cu  saxsKernel.h
System/: CMakeLists.txt  TrajectoryWrapper.cpp
Utilities/: BSpmod.cpp  CMakeLists.txt  CudaErrors.h
_api/: command-line.md  index.md
_includes/: header.html  navigation.html  social.html
_layouts/: default.html
_tutorials/: command-line.md  file-formats.md  grid-optimization.md  gui-tutorial.md  index.md  ion-corrections.md  performance.md  pparameters.md  protein-workflow.md  python-analysis.md  quick-start.md  troubleshooting.md  validation.md  water-models.md
_tutorials/quick-start/: index.md
cmake/: CuSAXSConfig.cmake.in  CuSAXSConfigVersion.cmake.in  FindDependencies.cmake
docs/: API.md  CMakeLists.txt
gui/: CMakeLists.txt
gui/include/: AdvancedOptionsDialog.h  InputForm.h  InputValidator.h  OptionsData.h
gui/src/: AdvancedOptionsDialog.cpp  InputForm.cpp  InputValidator.cpp  MainWindow.cpp  OptionsData.cpp  main.cpp
gui/ui/: MainWindow.ui
include/: TrajectoryWrapper.h
pysrc/: compareIqs.py  compareIqs_gpt.py  fitLamellar.py  form-factor-fitting-script.py  topology.py  trajectories.py  trajectory_interface.py
